Fix top align error

--- a/css/styles.css
+++ b/css/styles.css
@@ -545,7 +545,6 @@ footer {
     left: 0;
     right: 0;
     z-index: 1000;
-    align-items: top;
     padding-top: 0.5rem;
 }
 
